# gram-math

./: CMakeLists.txt  README.md
grammar/: grammar.bnf
resource/: grammar.bnf
src/: CMakeLists.txt  MathEvaluator.cpp  MathEvaluator.h  StreamLogger.cpp  StreamLogger.h  main.cpp
